--- a/python study/20221125.md
+++ b/python study/20221125.md
@@ -41,4 +41,5 @@ def solution(my_string):
 - for loop 동안에 삼항 연산자
 - 만약 i가 숫자라면 i를, 아니라면 `' '`를 리스트 내에 포함시킨 다음에, 그것을 join시킨다.
 - split 함수의 원형은 `split(구분자,횟수)`인데, sep 파라미터의 default는 띄어쓰기, 엔터를 구분자로 하고 자르게 된다.
+- 그리고 리스트 형태로 저장해준다.
 - 즉, 공백 부분을 잘라서 나눈 s의 i를 int형으로 바꿔서 다 더해준다.
