learning python sort,sorted,key

--- a/python study/20221129.md
+++ b/python study/20221129.md
@@ -81,7 +81,32 @@ other_code:
 solution=lambda a,n:sorted(a,key=lambda x:(abs(x-n),x))[0]
 ```
 
-key = lambda 이게 이해가 잘 안된다 -> youtube gogo
+### develope
+
+`key` , `sort` , `sorted` 에 대하여<br>
+
+우선 기본적으로 sort함수와 sorted함수의 차이는 리스트 원형을 변형하느냐 하지 않고 새로운 리스트를 만들어내는가의 차이다.<br>
+
+기본형은<br>
+`list.sort(key->function, reverse->BOOL)` 이다.<br>
+`sorted(list, key, reverse)`
+
+그럼, 여기서 key는 정렬이 될 기준을 만드는 것이다. <br>
+
+` array = [[50, "apple"], [30, "banana"] , [400, "melon"]]`
+
+이런 `[int,str]` 형태의 이중 리스트를 정렬한다고 했을 때, <br>4
+` array.sort(key=lambda x:x[0])` 을 사용하면 int를 기준으로 정렬할 수 있다. <br>
+
+생각해 본 것으로는 array의 item이 lambda함수의 x인자로 들어가고 `[int,str]` 형식으로 받아진 x변수에서 x[0]은 int형이기 때문에<br>
+int형으로 정리하는 것이라고 생각한다.
+
+다음으로, 좀 더 복잡한 리스트를 정리하는 것이다.<br>
+`array = [("A", 18, 300000) , ("F", 24, 10000), ("T", 24, 200000),("Q",24,5000000), ("B", 70, 5000)]`
+이 값을 2번째 item을 기준으로 정렬하되, 같을 경우 3번째 item을 기준으로 역순으로 정렬하라를 식으로 표현한다면, <br>
+` array.sort(key=lambda(x:x[1],-x[2]))` 라고 표현할 수 있다. <br>
+
+이것이 의미하는 것은 lambda의 x변수로 **(str,int1,int2)**가 들어갔는데, 그 중 **x[1]**인 int로 정렬하고, 만약 같다면, **x[2]**를 기준으로 정렬할 것인데,<br> - -> 역순으로 하라라는 것이다.
 
 ```python
 def solution(array, n):
